finish 02-class-id-selectors

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,18 @@
-/* Add CSS Styling */
+.pink-odd {
+    background-color: #FDA7A8;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+#blue-giant {
+    color: #0B24FB;
+    font-size: 36px;
+}
+
+.big {
+    font-size: 24px;
+}
+
+#green {
+    background-color: #85FD86;
+    font-weight: bold;
+}
