--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,9 @@
-/* Add CSS Styling */
+.avatar.proportioned {
+    height: auto; /* be explicit about this being auto, communicates intent */
+    width: 300px;
+}
+
+.avatar.distorted {
+    height: 400px;
+    width: 200px;
+}
