--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -3,6 +3,10 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  flex-direction: row; /* was not part of solution as it is default, but I want to make it explicit */
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
